added paragraphs and classes.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maynard James Keenan Tribute Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>A Tribute to Maynard</h1>
+    <p class="undertitle">A tribute to the lead singer of TOOL</p>
+    <h2 class="header2">Maynards Early Life</h2>
+    <p>Maynard James Keenan (born James Herbert Keenan) was born in Ravenna, Ohio in 1964. At the age of 11 his mother, Judith Marie, suffered a cerebral aneurysm. She was left paralyzed from the waist down until her death.</p>
+<p>In 1981, he joined the US army as a forward observer, but not too long after he left to study at West Point Prep School. Keenan sang in glee club, wrestled, and ran on the cross country team. 
+</p>
+<p></p>
+
     
 </body>
 </html>
